; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_sb.c_xfs_perag_put.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_sb.c_xfs_perag_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_perag = type { i32, i32, i32 }

@_RET_IP_ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xfs_perag_put(%struct.xfs_perag* %0) #0 {
  %2 = alloca %struct.xfs_perag*, align 8
  %3 = alloca i32, align 4
  store %struct.xfs_perag* %0, %struct.xfs_perag** %2, align 8
  %4 = load %struct.xfs_perag*, %struct.xfs_perag** %2, align 8
  %5 = getelementptr inbounds %struct.xfs_perag, %struct.xfs_perag* %4, i32 0, i32 2
  %6 = call i64 @atomic_read(i32* %5)
  %7 = icmp sgt i64 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = load %struct.xfs_perag*, %struct.xfs_perag** %2, align 8
  %11 = getelementptr inbounds %struct.xfs_perag, %struct.xfs_perag* %10, i32 0, i32 2
  %12 = call i32 @atomic_dec_return(i32* %11)
  store i32 %12, i32* %3, align 4
  %13 = load %struct.xfs_perag*, %struct.xfs_perag** %2, align 8
  %14 = getelementptr inbounds %struct.xfs_perag, %struct.xfs_perag* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.xfs_perag*, %struct.xfs_perag** %2, align 8
  %17 = getelementptr inbounds %struct.xfs_perag, %struct.xfs_perag* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @_RET_IP_, align 4
  %21 = call i32 @trace_xfs_perag_put(i32 %15, i32 %18, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @atomic_dec_return(i32*) #1

declare dso_local i32 @trace_xfs_perag_put(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
